--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,17 @@ language: go
 go:
   - 1.9.x
   # - tip
-before_install:
-  - go env
+install:
   - make deps
   # - go get github.com/mattn/goveralls
   # - go get github.com/modocache/gover
+  - npm install -g codeclimate-test-reporter
 script:
-  - go test ./...
+  - make coverage
   # - $GOPATH/bin/gover
   # - $GOPATH/bin/goveralls -coverprofile=gover.coverprofile -service=travis-ci -repotoken $COVERALLS_TOKEN
+after_success:
+  - codeclimate-test-reporter < ./tmp/coverage.txt
 cache:
   directories:
     - $GOPATH/bin
