--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,21 @@
 language: go
-
 go:
   - 1.9.x
-  # - tip
+  - tip
 install:
   - make deps
-  # - go get github.com/mattn/goveralls
-  # - go get github.com/modocache/gover
   - npm install -g codeclimate-test-reporter
 script:
   - make coverage
-  # - $GOPATH/bin/gover
-  # - $GOPATH/bin/goveralls -coverprofile=gover.coverprofile -service=travis-ci -repotoken $COVERALLS_TOKEN
 after_success:
   - codeclimate-test-reporter < ./tmp/coverage.txt
 cache:
   directories:
     - $GOPATH/bin
+    - $HOME/.npm
     - vendor
   timeout: 1000
+notifications:
+  email:
+    on_success: never
+    on_failure: always
