--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -4,7 +4,7 @@
 # Refer to https://github.com/golang/dep/blob/master/docs/Gopkg.toml.md
 # for detailed Gopkg.toml documentation.
 #
-required = ["github.com/vektra/mockery"]
+required = [ "github.com/vektra/mockery" ]
 # ignored = ["github.com/user/project/pkgX", "bitbucket.org/user/project/pkgA/pkgY"]
 #
 # [[constraint]]
@@ -20,8 +20,20 @@ required = ["github.com/vektra/mockery"]
 #  name = "github.com/x/y"
 #  version = "2.4.0"
 
+[[constraint]]
+  name = "github.com/stretchr/testify"
+  version = "=1.2.1"
+
 
 [[constraint]]
   name = "github.com/Masterminds/glide"
   version = "=0.13.1"
 
+[[constraint]]
+  name = "github.com/Masterminds/semver"
+  version = "=1.4.0"
+
+[prune]
+	non-go = true
+	go-tests = true
+	unused-packages = true
