--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -4,7 +4,7 @@
 # Refer to https://github.com/golang/dep/blob/master/docs/Gopkg.toml.md
 # for detailed Gopkg.toml documentation.
 #
-required = [ "github.com/vektra/mockery" ]
+# required = [ "github.com/vektra/mockery", "github.com/jteeuwen/go-bindata" ]
 # ignored = ["github.com/user/project/pkgX", "bitbucket.org/user/project/pkgA/pkgY"]
 #
 # [[constraint]]
