make test parallel, changes in codeclimate

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,4 +1,4 @@
-engines:
+plugins:
   gofmt:
     enabled: true
   govet:
@@ -10,6 +10,7 @@ engines:
 ratings:
   paths:
     - "**.go"
-exclude_paths:
+exclude_patterns:
   - vendor/
   - tmp/
+  - src/html/templates/bindata.go
