--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,3 +1,4 @@
+version: "2"
 plugins:
   gofmt:
     enabled: true
@@ -7,9 +8,6 @@ plugins:
     enabled: true
   fixme:
     enabled: true
-ratings:
-  paths:
-    - "**.go"
 exclude_patterns:
   - vendor/
   - tmp/
