--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ jobs:
     - export PATH="$GOPATH/bin:$PATH"
     script:
     - make coverage
-    - make lint
+    # - make lint
     after_success:
     - "./cc-test-reporter format-coverage -d -t gocov ./tmp/coverage.txt"
     - "./cc-test-reporter sum-coverage -d coverage/codeclimate.json"
