Implement gitlab support

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -37,3 +37,7 @@
 	non-go = true
 	go-tests = true
 	unused-packages = true
+
+[[constraint]]
+  name = "github.com/xanzy/go-gitlab"
+  version = "0.11.7"
